--- a/style.css
+++ b/style.css
@@ -72,3 +72,42 @@ button:hover {
   font-size: 3rem;
   padding: 1rem 0;
 }
+
+/* //////////////////////////////////// BOTTOM SECTION /////////////////////// */
+
+.bottom-div {
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.5rem;
+}
+
+.left-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.input-number {
+  margin: 0 0 1rem 0;
+  font-size: 3rem;
+  color: #fff;
+  background-color: #2c2929;
+  border: 1px solid #fff;
+  font-family: "Press Start 2P", cursive;
+  padding: 2.5rem;
+  width: 20rem;
+}
+
+.right-col {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 9rem;
+}
+
+.scoreboard {
+  line-height: 2.5rem;
+}
